Fixed scrollbar issue on Windows

--- a/src/App.scss
+++ b/src/App.scss
@@ -137,7 +137,7 @@ background-size: 16px 48px;
     grid-column-end: 5;
     text-align: left;
     margin-top: 7px;
-    overflow-x: scroll;
+    overflow-x: hidden;
   }
 }
 
